feat: Adding UUID ids and splitting controllers
