# src/main/kotlin/tech/pacifici/patronus/controller/PatronusControllerApi.kt
@@ -1,170 +1,0 @@
-package tech.pacifici.patronus.controller
-
-import org.springframework.http.HttpStatus
-import org.springframework.http.ResponseEntity
-import tech.pacifici.patronus.api.PatronusApi
-import tech.pacifici.patronus.model.CommentRequest
-import tech.pacifici.patronus.model.CommentResponse
-import tech.pacifici.patronus.model.FriendshipRequest
-import tech.pacifici.patronus.model.FriendshipResponse
-import tech.pacifici.patronus.model.FriendshipUpdateRequest
-import tech.pacifici.patronus.model.PostRequest
-import tech.pacifici.patronus.model.PostResponse
-import tech.pacifici.patronus.model.UserRequest
-import tech.pacifici.patronus.model.UserResponse
-
-/**
- * REST controller implementation for the Patronus API.
- * This class provides endpoints for managing users, posts, comments, and friendships.
- * It implements the [PatronusApi] interface and handles HTTP requests related to the core features of the Patronus application.
- */
-class PatronusControllerApi : PatronusApi {
-    /**
-     * Creates a new comment.
-     *
-     * @param commentRequest The request body containing the details of the comment to create.
-     * @return A [ResponseEntity] containing the created [CommentResponse] and HTTP status.
-     */
-    override fun createComment(commentRequest: CommentRequest): ResponseEntity<CommentResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Creates a new post.
-     *
-     * @param postRequest The request body containing the details of the post to create.
-     * @return A [ResponseEntity] containing the created [PostResponse] and HTTP status.
-     */
-    override fun createPost(postRequest: PostRequest): ResponseEntity<PostResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Creates a new user.
-     *
-     * @param userRequest The request body containing the details of the user to create.
-     * @return A [ResponseEntity] containing the created [UserResponse] and HTTP status.
-     */
-    override fun createUsers(userRequest: UserRequest): ResponseEntity<UserResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Deletes a post by its ID.
-     *
-     * @param id The ID of the post to delete.
-     * @return A [ResponseEntity] with HTTP status indicating the result of the operation.
-     */
-    override fun deletePostById(id: Long): ResponseEntity<Unit> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Deletes a user by their ID.
-     *
-     * @param id The ID of the user to delete.
-     * @return A [ResponseEntity] with HTTP status indicating the result of the operation.
-     */
-    override fun deleteUserbyId(id: Long): ResponseEntity<Unit> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Retrieves a post by its ID.
-     *
-     * @param id The ID of the post to retrieve.
-     * @return A [ResponseEntity] containing the [PostResponse] and HTTP status.
-     */
-    override fun getPostById(id: Long): ResponseEntity<PostResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Retrieves all posts.
-     *
-     * @return A [ResponseEntity] containing a list of [PostResponse] and HTTP status.
-     */
-    override fun getPosts(): ResponseEntity<List<PostResponse>> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Retrieves all users.
-     *
-     * @return A [ResponseEntity] containing a list of [UserResponse] and HTTP status.
-     */
-    override fun getUsers(): ResponseEntity<List<UserResponse>> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Retrieves a user by their ID.
-     *
-     * @param id The ID of the user to retrieve.
-     * @return A [ResponseEntity] containing the [UserResponse] and HTTP status.
-     */
-    override fun getUsersById(id: Long): ResponseEntity<UserResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Sends a friendship request.
-     *
-     * @param friendshipRequest The request body containing the details of the friendship request.
-     * @return A [ResponseEntity] containing the [FriendshipResponse] and HTTP status.
-     */
-    override fun postFriendRequest(friendshipRequest: FriendshipRequest): ResponseEntity<FriendshipResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Updates the status of a friendship.
-     *
-     * @param friendshipUpdateRequest The request body containing the details of the friendship update.
-     * @return A [ResponseEntity] containing the updated [FriendshipResponse] and HTTP status.
-     */
-    override fun updateFriendship(friendshipUpdateRequest: FriendshipUpdateRequest): ResponseEntity<FriendshipResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Updates a post by its ID.
-     *
-     * @param id The ID of the post to update.
-     * @param postRequest The request body containing the updated details of the post.
-     * @return A [ResponseEntity] containing the updated [PostResponse] and HTTP status.
-     */
-    override fun updatePostById(
-        id: Long,
-        postRequest: PostRequest,
-    ): ResponseEntity<PostResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-
-    /**
-     * Updates a user by their ID.
-     *
-     * @param id The ID of the user to update.
-     * @param userRequest The request body containing the updated details of the user.
-     * @return A [ResponseEntity] containing the updated [UserResponse] and HTTP status.
-     */
-    override fun updateUserById(
-        id: Long,
-        userRequest: UserRequest,
-    ): ResponseEntity<UserResponse> {
-        // TODO: Implement your business logic here
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
-    }
-}
