# src/main/kotlin/tech/pacifici/patronus/controller/PatronusPostControllerApi.kt
@@ -1,0 +1,98 @@
+package tech.pacifici.patronus.controller
+
+import io.swagger.v3.oas.annotations.Parameter
+import jakarta.validation.Valid
+import org.springframework.http.HttpStatus
+import org.springframework.http.ResponseEntity
+import org.springframework.web.bind.annotation.PathVariable
+import org.springframework.web.bind.annotation.RequestBody
+import org.springframework.web.bind.annotation.RestController
+import tech.pacifici.patronus.api.PatronusPostsApi
+import tech.pacifici.patronus.model.CommentRequest
+import tech.pacifici.patronus.model.CommentResponse
+import tech.pacifici.patronus.model.FriendshipResponse
+import tech.pacifici.patronus.model.FriendshipUpdateRequest
+import tech.pacifici.patronus.model.PostRequest
+import tech.pacifici.patronus.model.PostResponse
+
+/**
+ * REST controller implementation for the Patronus API.
+ * This class provides endpoints for managing users, posts, comments, and friendships.
+ * It implements the [PatronusApi] interface and handles HTTP requests related to the core features of the Patronus application.
+ */
+@RestController
+class PatronusPostControllerApi : PatronusPostsApi {
+    /**
+     * Creates a new comment.
+     *
+     * @param commentRequest The request body containing the details of the comment to create.
+     * @return A [ResponseEntity] containing the created [CommentResponse] and HTTP status.
+     */
+    override fun createComment(
+        @Parameter(description = "", required = true) @PathVariable("id") id: java.util.UUID,
+        @Parameter(description = "", required = true) @Valid @RequestBody commentRequest: CommentRequest,
+    ): ResponseEntity<CommentResponse> {
+        // TODO: implement the logic here
+        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    }
+
+    /**
+     * Creates a new post.
+     *
+     * @param postRequest The request body containing the details of the post to create.
+     * @return A [ResponseEntity] containing the created [PostResponse] and HTTP status.
+     */
+    override fun createPost(postRequest: PostRequest): ResponseEntity<PostResponse> {
+        // TODO: Implement your business logic here
+        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    }
+
+    /**
+     * Deletes a post by its ID.
+     *
+     * @param id The ID of the post to delete.
+     * @return A [ResponseEntity] with HTTP status indicating the result of the operation.
+     */
+    override fun deletePostById(id: java.util.UUID): ResponseEntity<Unit> {
+        // TODO: Implement your business logic here
+        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    }
+
+    /**
+     * Retrieves a post by its ID.
+     *
+     * @param id The ID of the post to retrieve.
+     * @return A [ResponseEntity] containing the [PostResponse] and HTTP status.
+     */
+    override fun getPostById(id: java.util.UUID): ResponseEntity<PostResponse> {
+        // TODO: Implement your business logic here
+        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    }
+
+    /**
+     * Retrieves all posts.
+     *
+     * @return A [ResponseEntity] containing a list of [PostResponse] and HTTP status.
+     */
+    override fun getPosts(): ResponseEntity<List<PostResponse>> {
+        // TODO: Implement your business logic here
+        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    }
+
+
+
+    /**
+     * Updates a post by its ID.
+     *
+     * @param id The ID of the post to update.
+     * @param postRequest The request body containing the updated details of the post.
+     * @return A [ResponseEntity] containing the updated [PostResponse] and HTTP status.
+     */
+    override fun updatePostById(
+        id: java.util.UUID,
+        postRequest: PostRequest,
+    ): ResponseEntity<PostResponse> {
+        // TODO: Implement your business logic here
+        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    }
+}
